# bt-trading-tools

./: .env.example  CLAUDE.md  pyproject.toml
bt_trading_tools/: __init__.py  alpha_yield.py  amm.py  execution.py  fees.py  harness.py
bt_trading_tools/backtest/: __init__.py  cv.py  engine.py  scheduled.py  stats.py  types.py
bt_trading_tools/data/: __init__.py  crypto_macro.py  loader.py  ticks.py
bt_trading_tools/network/: __init__.py  client.py  executor.py  taoflute.py  wallet.py
bt_trading_tools/tracking/: __init__.py  decision_log.py  event_log.py  fee_receipt.py  metrics.py  pnl.py  portfolio_log.py  reader.py  schema.py  trade_log.py  writer.py
bt_trading_tools/utils/: lifecycle.py
docs/: taostats_schema.md  trade_log_schema.md
tests/: test_alpha_yield.py  test_amm.py  test_backtest.py  test_execution.py  test_executor_receipts.py  test_fees.py  test_network.py  test_pool_safety_lookahead.py  test_tracking.py  test_tracking_v1.py
